added coupon,referal, completed bid flow,optimized the bakend logic